[project]
name = "retouch"
version = "0.1.0"
description = "AI Image Studio"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "monsterui>=1.0.45",
    "openai>=2.32.0",
    "python-fasthtml>=0.13.4",
]

[tool.ruff.lint]
ignore = ["F405", "F403"]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
